# Telematics-Web-Server

./: .gitignore  CMakeLists.txt  README.md  main.c  servidor
Config/: Config.c  Config.h  proxy.config
Includes/: HttpUtils.c  HttpUtils.h  ISocket.h  http.h  messages.h  structs.h
Shared/: ISocket.h  http.h  structs.h
include/: structs.h
modules/CacheManager/: CacheCleanWorker.c  CacheCleanWorker.h  CacheIO.c  CacheIO.h  CacheIndex.c  CacheIndex.h  CacheManager.c  CacheManager.h  CacheStoreWorker.c  CacheStoreWorker.h  CacheUtils.c  CacheUtils.h  CacheWorker.c  CacheWorker.h
modules/HttpParser/: HttpParser.c  HttpParser.h  HttpResponseParser.c  HttpResponseParser.h  UriParser.c  UriParser.h
modules/HttpServer/Src/: http.h  message_queue.c  message_queue.h  uri_parser.c  uri_parser.h
modules/HttpServer/src/: FileManager.c  FileManager.h  FileManagerIO.c  FileManagerIO.h  FileManagerTypes.h  FileManagerUtils.c  FileManagerUtils.h  Main.c  MainServer.c  MessageQueue.c  MessageQueue.h  Response.c  Response.h  ResponseBody.c  ResponseSender.c  ResponseSender.h  Worker.c  WorkerWS.c  WorkerWS.h  main.c
modules/HttpServer/www/: about.html  index.html  styles.css
modules/HttpServer2/src/: FileManager.c  FileManagerTypes.h  MainServer.c  Response.c  ResponseSender.h
modules/HttpServer2/www/: index.html
modules/HttpServer3/src/: FileManagerUtils.h  MainServer.c  MainServer.h  Response.c  ResponseBody.c  ResponseBody.h  WorkerWS.h
modules/LoadBalancer/: HealthCheck.c  HealthCheck.h  loadBalancer.c  loadBalancer.h
modules/Logs/: Log.c  Log.h
modules/Replicator/: Replicator.c  Replicator.h
modules/Socket/: Socket.c  Socket.h
modules/Worker/: ProxyWorker.c  ProxyWorker.h  ReplicatorWorker.c  ReplicatorWorker.h  Worker.c  Worker.h
shared/: ISocket.h
(+5 files in other folders)
